--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: base
     </div>
     <hr>
     <div class="post_foot_meta">
-      {% include duoshuo.html %}  
+     <!-- {% include duoshuo.html %}  -->
     </div>
   </div>
   <div class="col-md-3">
