--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<title>{{ page.title }} | 闫肃的个人博客</title>
+<title>{{ page.title }} |{% include title.html %}</title>
 <meta name="author" content="{{ site.author.name }}">
 {% if page.keywords %}
   <meta name="keywords" content="{{ page.keywords }}">
