--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">闫肃的个人博客</a>
+      <a class="navbar-brand" href="/">{% include title.html %}</a>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav">
@@ -14,7 +14,6 @@
         <li><a href="/pages/categories.html"><i class="icon-th-large icon-white"></i> 分类</a></li> 
         <li><a href="/pages/tags.html"><i class="icon-tags icon-white"></i> 标签</a></li> 
         <li><a href="/pages/archive.html"><i class="icon-file icon-white"></i> 归档</a></li> 
-        <li><a href="/pages/atom.xml"><i class="icon-rss icon-white"></i> 订阅</a></li> 
         <li><a href="/pages/about.html"><i class="icon-user icon-white"></i> 关于</a></li> 
       </ul>
       <ul class="nav navbar-nav navbar-right">
