--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,6 +12,6 @@
     <div class="body_push"></div>
   </div>
   {% include footer.html %}
-  {% include googleanalytics.html %}
+  {% include analytics.html %}
 </body>
 </html>
