--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-md-3 col-md-offset-9 text-right">
        <!--  <div>Hosted on <a href="http://pages.github.com/">Github Pages</a></div>
         <div>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a></div> -->
-		<div>github . jurnlee</div>
+		<div><h2>github . jurnlee </h2> </div>
       </div>
     </div>
   </div>
