--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,18 @@ layout: base
     <div class="panel panel-info">
       <div class="panel-heading">
       <h2>{{ page.title }}</h2>
-      <p>由作者 <a href="/pages/about.html">{{ site.author.name }}</a> 发布于 <a href='/pages/archive.html#{{ page.date | date:"%Y-%m"}}'>{{ page.date | date:"%Y年%m月%d日" }}</a> 分类: {% for category in page.category %} <a href="/pages/categories.html#{{ category }}">{{ category }}</a> {% endfor %}  标签: {% for tag in page.tags %} <a href="/pages/tags.html#{{ tag }}">#{{ tag }}#</a> {% endfor %}</p>
+      <p>
+      	{{site.author.name}} <a href="{{ site.links.aboutlink }}">{{ site.author.name }}</a> 
+      	{{ site.constants.postat }} <a href='/pages/archive.html#{{ page.date | date:"%Y-%m"}}'>
+      	{{ page.date | date:"%Y-%m-%d" }}</a> 
+      	{{ site.locals.category }}: 
+      	{% for category in page.category %} 
+      		<a href="/pages/categories.html#{{ category }}">{{ category }}</a>
+		{% endfor %}  
+		{{ site.locals.tags }}: 
+		{% for tag in page.tags %} <a href="/pages/tags.html#{{ tag }}">#{{ tag }}#</a>
+		 {% endfor %}
+		</p>
       </div>
       <div class="panel-body content" id="content">
         <blockquote>{{ page.description }}</blockquote>
@@ -22,7 +33,9 @@ layout: base
     <div class="row">
       <div class="side_nav aside" data-spy="affix" data-offset-top="0">
         <div class="panel panel-success">
-          <div class="panel-heading">目录</div>
+          <div class="panel-heading"> 
+          		{{site.locals.content}}
+          </div>
           <div class="panel-body" id="nav"></div>
         </div>
       </div>
