--- a/public/css/base.css
+++ b/public/css/base.css
@@ -11,7 +11,7 @@ body{padding-top: 70px;}
 }
 .body_push{height:100px;}
 .body_footer {height:100px;background-color: #f5f5f5;}
-.body_footer .container{padding-top: 30px;padding-bottom: 30px;}
+/*.body_footer .container{padding-top: 30px;padding-bottom: 30px;}*/
 @media screen and (min-width: 992px) {
   .affix {top:70px;}
   .aside {width: 226px;}
