--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <title>{{ page.title }} |{{ site.author.blogname }}</title>
-<meta name="author" content="{{ site.author.name }}">
+<meta name="author" content="{{ site.author.sitename }}">
 {% if page.keywords %}
   <meta name="keywords" content="{{ page.keywords }}">
 {% endif %}
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/public/css/bootstrap.css">
 <link rel="stylesheet" href="/public/css/font-awesome.css">
-<link rel="stylesheet" href="/public/js/prettify/prettify.css">
+<link rel="stylesheet" href="/public/libs/prettify/prettify.css">
 <link rel="stylesheet" href="/public/css/base.css">
 <link href="/pages/atom.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
 <script type="text/javascript" src="/public/js/jquery.js"></script>
