--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">{% include title.html %}</a>
+      <a class="navbar-brand" href="/">{{ site.author.blogname }}</a>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav">
