--- a/public/css/ie8.css
+++ b/public/css/ie8.css
@@ -1,54 +1,113 @@
-/*
-	Hyperspace by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 /* Type */
 
-	body, input, select, textarea {
-		color: #ffffff;
-	}
+body,
+input,
+select,
+textarea {
+	color: #ffffff;
+}
+
 
 /* Button */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
-	.button {
-		position: relative;
-	}
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+button,
+.button {
+	position: relative;
+}
 
-		input[type="submit"]:after,
-		input[type="reset"]:after,
-		input[type="button"]:after,
-		button:after,
-		.button:after {
-			display: none;
-		}
+input[type="submit"]:after,
+input[type="reset"]:after,
+input[type="button"]:after,
+button:after,
+.button:after {
+	display: none;
+}
 
-/* Features */
 
-	.features {
-		border: solid 1px;
-	}
+/* Basic */
+
+pre,
+code {
+	position: relative;
+	-ms-behavior: url("public/js/ie/PIE.htc");
+}
+
 
 /* Form */
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	input[type="tel"],
-	select,
-	textarea {
-		background: transparent;
-		border: solid 1px;
-	}
+input[type="text"],
+input[type="password"],
+input[type="email"],
+select,
+textarea {
+	position: relative;
+	-ms-behavior: url("public/js/ie/PIE.htc");
+	line-height: 3em;
+}
 
-/* Split */
+input[type="checkbox"],
+input[type="radio"] {
+	opacity: 1;
+	z-index: auto;
+}
 
-	.split.style1 > :first-child {
-		padding-right: 2em;
-		width: 70%;
-	}
+input[type="checkbox"] + label:before,
+input[type="radio"] + label:before {
+	display: none;
+}
+
+
+/* Button */
+
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+.button {
+	position: relative;
+	-ms-behavior: url("public/js/ie/PIE.htc");
+}
+
+input[type="submit"].alt,
+input[type="reset"].alt,
+input[type="button"].alt,
+.button.alt {
+	border: solid 2px #e5e5e5;
+}
+
+
+/* Box */
+
+.box {
+	position: relative;
+	-ms-behavior: url("public/js/ie/PIE.htc");
+}
+
+.box .image.featured {
+	margin: 2em 0;
+	width: 100%;
+}
+
+
+/* Icon */
+
+.icon.major {
+	position: relative;
+	-ms-behavior: url("public/js/ie/PIE.htc");
+}
+
+
+/* Image */
+
+.image {
+	position: relative;
+	-ms-behavior: url("public/js/ie/PIE.htc");
+}
+
+.image img {
+	position: relative;
+	-ms-behavior: url("public/js/ie/PIE.htc");
+}
