--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,11 +8,15 @@
 		html,body{
 			height: 100%;
 			width: 100%;
+			background-color: #f9f9f9;
 		}
 		.divider{
 			clear: both;
 			width: 100%;
 			display: block;
+			text-align: center;
+			font-family: "微软雅黑";
+			line-height: 1.4rem;
 		}
 		.divider.xsdivider{
 			height: 5px;
@@ -75,11 +79,18 @@
 					top: 0;
 				}
 			}
+			@keyframes scaled {
+				0% {transform: scale(1); }
+				25%{transform: translate(1.2);}
+				50%{transform: scale(0.9);}
+				75%{transform: scale(1.1);}
+				100% {transform: scale(1);}
+			}
 			#header{
 				position: absolute;
 				left: 0;
 				top: 0;
-				height: 4rem;
+				color: #fff;
 				width: 100%;
 				z-index: 9999;
 			}
@@ -96,12 +107,16 @@
 				-ms-animation: none;
 				animation: none;
 				background: none;
-				color: rgba(255, 255, 255, 0.75);
 			}
 			#header.reveal #nav{
-				background: rgba(255, 255, 255, 0.1);
-				box-shadow: 0px 1px 3px rgba(3, 3, 3, 0.2);
+				background: rgba(255, 255, 255, 0.9);
+				box-shadow: 0px 1px 2px rgba(30, 30, 30, 0.2);
 				border-bottom: solid #ccc thin;
+				color: #555;
+				height: 3rem;
+			}
+			#header.reveal #nav #nav-list, #header.reveal #nav #logo{
+				line-height: 3rem;
 			}
 			#nav {
 				position: relative;
@@ -119,14 +134,22 @@
 			#nav-list {
 				position: absolute;
 				line-height: 4rem;
-				color: #fff;
-				font-family: "arial black";
+				font-family: "微软雅黑";
 			}
 			
 			#logo {
 				left: 1rem;
 				font-size: 2rem;
-				//font-family: elephant;
+				font-family: "微软雅黑";
+			}
+			#logo:hover{
+				animation: scaled 0.3s ease-in-out;
+				-moz-animation: scaled 0.3s ease-in-out;
+				-webkit-animation: scaled 0.3s ease-in-out;
+				-ms-animation: scaled 0.3s ease-in-out;
+				backface-visibility: hidden;
+				-ms-backface-visibility: hidden;
+				-moz-backface-visibility: hidden;
 			}
 			
 			#nav-list {
@@ -138,27 +161,25 @@
 				/* == #nav-list > ul li */
 				position: relative;
 				float: left;
-			}
-			
-			#nav-list .nav-item a {
 				margin: 0 0.5rem;
 				padding: 0 0.5rem;
 				display: inline-block;
-				height: auto;
+				height: 100%;
+			}
+			
+			#nav-list .nav-item a {
+				padding: 0.5rem;
+				height: 3rem;
 				width: 100%;
+				border: solid thin rgba(0,0,0,0);
 			}
 			
-			#nav-list .nav-item:hover {
+			#nav-list .nav-item:hover a{
 				text-shadow: 0 0 3rem #fff;
+				background-color: rgba(220,220,220,0.25);
+				border: solid thin #CCC;
+				border-radius: 5px;
 				color: #f99988;/*6ce*/
-			}
-			
-			#nav-list .nav-item:hover ul {
-				display: block;
-				transform: rotate(6deg);
-				-moz-transform: rotate(6deg);
-				-ms-transform: rotate(6deg);
-				-webkit-transform: rotate(6deg);
 			}
 			
 			#nav-list .nav-item ul {
@@ -172,23 +193,27 @@
 				background-color: #fff;
 			}
 			/*
+			 #nav-list .nav-item:hover ul {
+				display: block;
+				transform: rotate(6deg);
+				-moz-transform: rotate(6deg);
+				-ms-transform: rotate(6deg);
+				-webkit-transform: rotate(6deg);
+			}
 			#nav-list .nav-item ul li {
 				float: left;
 				width: 100%;
 				line-height: 2rem;
 			}
-			
 			#nav-list .nav-item ul li a {
 				margin: 0;
 				padding: 0 0.5rem;
 			}
-			
 			#nav-list .nav-item ul li a:hover {
 				background-color: #f96;
 				color: #fff;
 			}
 			*/
-			
 			/* jQuery.dropotron
 			 * https://github.com/n33/jquery.dropotron 
 			 */
@@ -451,15 +476,14 @@
 				left: 0;
 				height: 100%;
 				width: 100%;
-				/*background-position: center;
-				background-image: url('public/img/hbg01.jpg');
-				background-color: #666;
+				background-position: center;
+				background-image: url('../img/hbg01.jpg');
+				background-color: #273C4F;  
 				background-size: cover;
-				background-attachment: scroll, fixed;*/
-				background: url('../img/hbg01.jpg'),url('../img/bg200150.jpg') ;
+				/*background: url('../img/hbg01.jpg'),url('../img/bg200150.jpg') ;
 				background-position: center center,top left;
 				background-repeat: no-repeat,no-repeat;
-				background-size: cover,cover;
+				background-size: cover,cover;*/
 				/*
 				-webkit-filter: blur(1px); 
        	-moz-filter: blur(1px);
@@ -506,11 +530,11 @@
 			#main{
 				text-align: center;
 				font-family: "微软雅黑";
-				font-size: 5rem;
+				font-size: 3rem;
 			}
 			#one,#two,#three{
 				width: 100%;
-				height: 400px;
+				height: 300px;
 			}
 			#one{
 				background: #69c;
@@ -525,8 +549,11 @@
 			/* footer */
 			#footer{
 				height: 150px;
-				background: #666;
-				color: #f1f1f1;
+				background: #F0F0F0;
+				color: #777;
+				text-align: center;
+				font-family:"consolas"; //century gothic
+				font-size: 1.2rem;
 			}
 			
 			/*================================== Media Queries =========================================*/
