--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,6 +10,28 @@
 			width: 100%;
 			background-color: #f9f9f9;
 		}
+		.align-center{
+			text-align: center;
+		}
+		.small-txt{
+				font-size: 0.85rem;
+			}
+		.txt-underline{
+			display: block;
+			width: 100%;
+			margin-bottom: 20px;
+		}
+		.txt-underline:after{
+			content: ' ';
+			display: block;
+			width: 100%;
+			height: 1px;
+			background-color: #999;
+			position: relative;
+			bottom: -0.5rem;
+			left: 0;
+			margin-bottom: 1rem;
+		}
 		.divider{
 			clear: both;
 			width: 100%;
@@ -370,28 +392,26 @@
 				border: 0;
 				outline: 0;
 			}
-			
 			#navButton .toggle:before {
 				-moz-osx-font-smoothing: grayscale;
 				-webkit-font-smoothing: antialiased;
-				font-family: FontAwesome;
-				font-style: normal;
-				font-weight: normal;
-				text-transform: none !important;
+				font-family: icomoon;
 				background: rgba(109, 109, 109, 0.75);
 				border-radius: 5px;
 				color: #fff;
 				content: '\f0c9';
 				display: block;
-				font-size: 16px;
-				height: 2.25em;
-				left: 0.5em;
-				line-height: 2.25em;
-				position: absolute;
+				font-size: 1.4rem;
 				text-align: center;
-				top: 0.5em;
-				width: 3.5em;
+				text-transform: none !important;
+				height: 2.2rem;
+				line-height: 2.2rem;
+				width: 3rem;
+				display: block;	
+				left: 0.5rem;	
+				top: 0.5rem;		
 			}
+			
 			/* created nav pannel and animate */
 			#navPanel {
 				-moz-backface-visibility: hidden;
@@ -548,12 +568,19 @@
 			}
 			/* footer */
 			#footer{
-				height: 150px;
-				background: #F0F0F0;
-				color: #777;
-				text-align: center;
-				font-family:"consolas"; //century gothic
-				font-size: 1.2rem;
+				position: relative;
+				height: auto;
+				line-height: 1.4rem;
+				background: #333;
+				color: #999;
+				text-align: left;
+				font-family:"consolas"; /*century gothic */
+			}
+			#footer a{
+				color: #3B8DAF;
+			}
+			#footer .last{
+				margin-bottom: 20px;
 			}
 			
 			/*================================== Media Queries =========================================*/
