--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,28 @@
-<meta charset="utf-8">
-<title>{{ page.title }} |{{ site.author.blogname }}</title>
-<meta name="author" content="{{ site.author.sitename }}">
-{% if page.keywords %}
-  <meta name="keywords" content="{{ page.keywords }}">
-{% endif %}
-{% if page.description  %}
-  <meta name="description " content="{{ page.description  }}">
-{% endif %}
-<link rel="icon" href="/public/css/favicon.ico">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/public/css/bootstrap.css">
-<link rel="stylesheet" href="/public/css/font-awesome.css">
-<link rel="stylesheet" href="/public/libs/prettify/prettify.css">
-<link rel="stylesheet" href="/public/css/base.css">
-<link href="/pages/atom.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
-<script type="text/javascript" src="/public/js/jquery.js"></script>
+<!-- header -->
+			<header id="header" class="ani-flag ">
+				<!-- nav -->
+				<nav id="nav">
+					<div class="nav-wraper">
+						<div id="logo">
+							<!--jurnlee-->筱枫夜の印象视界
+						</div>
+						<div id="nav-list">
+							<ul>
+								<li class="nav-item"> <a href="index.html"> Home </a> </li>
+								<li class="nav-item">
+									<a href="#"> Categories <span class="icon icon-angle-down"></span></a>
+									<ul>
+										<li> <a href="#"> Developer </a> </li>
+										<li> <a href="#"> CG </a> </li>
+										<li> <a href="#"> Digital </a> </li>
+										<li> <a href="#"> Life </a> </li>
+										<li> <a href="#"> Essay </a> </li>
+									</ul>
+								</li>
+								<li class="nav-item"> <a href="#"> About </a> </li>
+								<li class="nav-item"> <a href="#"> Contact </a> </li>
+							</ul>
+						</div>
+					</div>
+				</nav>
+			</header>
