--- a/_layouts/mainpage.html
+++ b/_layouts/mainpage.html
@@ -4,10 +4,12 @@
   {% include head.html %}
 </head>
 <body>
-  <div id="page-wrapper">
+  <div class="page-wrapper">
     {% include header.html %}
     
-    <div id="main" class="container">
+    {% include banner.html %}
+    
+    <div class="container">
       {{ content }}
     </div> 
   
