--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,9 +133,14 @@
 			#header.reveal #nav{
 				background: rgba(255, 255, 255, 0.9);
 				box-shadow: 0px 1px 2px rgba(30, 30, 30, 0.2);
-				border-bottom: solid #ccc thin;
+				/*border-bottom: solid #ccc thin;*/
 				color: #555;
 				height: 3rem;
+				line-height: 3rem;
+			}
+			#header.reveal #logo{
+				color: #3B8DAF;
+				font-size: 1.5rem;
 			}
 			#header.reveal #nav #nav-list, #header.reveal #nav #logo{
 				line-height: 3rem;
