update 0302,template to jekyll

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,11 +2,9 @@
 	
 <!--banner-->
 <div id="hd-banner">
-	<div class="hd-bg"></div>
+	<div id="hd-bgs"></div>
 	<div class="hd-txt">
-		<h1>当你不断追求卓越的时候，成功一定会追赶你的脚步</h1>
-		<p>待到成功后再诉说的艰辛过程，一切都将被轻描淡写的多么清晰完美，但永远没有这样一边走一边探索出的东西真切，更具有普遍意义。
-			<br />所以，请开始记录所有的悲愤故事，快乐故事吧。
-		</p>
+		<h1> {{ site.idx.bannerh1}} </h1>
+		<p> {{ site.idx.bannerp}} </p>
 	</div>
 </div>
