--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 				<div class="container small-txt">
 					<div class="row">
 						<div class="4u small-txt align-center">
-							<img src="public/img/qrcode_litemaple.jpg" height="130px"/>
+							<img src="/public/img/qrcode_litemaple.jpg" height="130px"/>
 							<br />扫码关注一个人的公众号
 						</div>
 						<div class=" 4u ">   
@@ -41,13 +41,13 @@
 			</div>
 			
 <!-- jQuery -->
-		<script src="public/js/jquery.js"></script>
+		<script src="/public/js/jquery.js"></script>
 
 		<!-- Plugin JavaScript -->
-		<script src="public/js/skel.min.js"></script>
-		<script src="public/js/skel-layout.min.js"></script>
-		<script src="public/js/jquery.dropotron.min.js"></script>
-		<script src="public/js/util.js"></script>
-		<script src="public/js/jquery.scrollgress.min.js"></script>
-		<script src="public/js/main.js"></script>
+		<script src="/public/js/skel.min.js"></script>
+		<script src="/public/js/skel-layout.min.js"></script>
+		<script src="/public/js/jquery.dropotron.min.js"></script>
+		<script src="/public/js/util.js"></script>
+		<script src="/public/js/jquery.scrollgress.min.js"></script>
+		<script src="/public/js/main.js"></script>
 		
