--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,10 +14,10 @@
 	{% endif %}
 	
 <link rel="icon" href="/public/css/favicon.ico">
-<link rel="stylesheet" type="text/css" href="public/css/reset.css" media="all">
-<link rel="stylesheet" type="text/css" href="public/css/myicon.css" media="all">
-<link rel="stylesheet" type="text/css" href="public/css/main.css" media="all">
-<link rel="stylesheet" type="text/css" href="public/css/github-light.css" media="all">
+<link rel="stylesheet" type="text/css" href="/public/css/reset.css" media="all">
+<link rel="stylesheet" type="text/css" href="/public/css/myicon.css" media="all">
+<link rel="stylesheet" type="text/css" href="/public/css/main.css" media="all">
+<link rel="stylesheet" type="text/css" href="/public/css/myainimate.css" media="all">
 <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 <!--[if lt IE 9]>
