--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,7 +7,7 @@
   <div id="page-wrapper">
     {% include header.html %}
     
-    <div id="main" class="container">
+    <div class="container">
       {{ content }}
     </div> 
   
