--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,6 +100,7 @@
 			#header.reveal #nav #nav-list, #header.reveal #nav #logo{
 				line-height: 3rem;
 			}
+			
 			/* 首页导航条特殊样式*/
 			.page-index #header{ 
 				position: absolute;
@@ -422,32 +423,71 @@
 				height: 100%;
 				width: 100%;
 			}
-			#hd-bgs,#hd-bgs .hd-bg{
-				height: 100%;
-				width: 100%;
-			}
-			
 			#hd-bgs{
 				position: absolute;
 				top: 0;
 				left: 0;
 				background-color: #273C4F; 
 			}
-			#hd-banner .hd-bg{
+			.hd-bg{
+			}
+			#hd-bgs,#hd-bgs .hd-bg{
+				height: 100%;
+				width: 100%;
 				background-position: center;
 				background-size: cover; 
-				/*background-image: url('../img/hbg01.jpg');*/
-				/*background: url('../img/hbg01.jpg'),url('../img/bg200150.jpg') ;
+			}
+			#hd-bgs .hd-bg.active{
+				-moz-animation: bg-in 3s;
+			    -webkit-animation: bg-in 3s;
+			    -ms-animation: bg-in 3s;
+			    animation: bg-in 3s;
+			    /*-moz-animation-delay: 1.5s;
+			    -webkit-animation-delay: 1.5s;
+			    -ms-animation-delay: 1.5s;
+			    animation-delay: 1.5s;*/
+			    -moz-animation-fill-mode: both;
+			    -webkit-animation-fill-mode: both;
+			    -ms-animation-fill-mode: both;
+			    animation-fill-mode: both;
+			}
+			#hd-bgs .hd-bg.hiden{
+				display: none;
+			}
+			/*
+			#hd-bgs .hd-bg{
+				background-position: center;
+				background-size: cover; 
+				background-image: url('../img/hbg01.jpg');
+				background: url('../img/hbg01.jpg'),url('../img/bg200150.jpg') ;
 				background-position: center center,top left;
 				background-repeat: no-repeat,no-repeat;
-				background-size: cover,cover;*/
-				/*
+				background-size: cover,cover;
+				
 				-webkit-filter: blur(1px); 
-       	-moz-filter: blur(1px);
-        -ms-filter: blur(1px);   
-        filter: blur(1px);
-        filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='public/img/hbg01', sizingMethod='scale');// for < ie9 
+       			-moz-filter: blur(1px);
+        		-ms-filter: blur(1px);   
+        		filter: blur(1px);
+        		filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='public/img/hbg01', sizingMethod='scale');// for < ie9 
+			}
 			*/
+			#hd-bgs #idx-wraper{
+				position: absolute;
+				bottom: 0.5rem;
+				left: 0;
+				right: 0;
+				text-align: center;
+			}
+			#hd-bgs .hd-bg-idx{
+				display: inline-block;
+				width: 1rem;
+				height: 1rem;
+				margin: 0 0.2rem;
+				background-color: rgba(220,220,220,0.6);
+				border-radius: 0.5rem;
+			}
+			#hd-bgs .hd-bg-idx.active{
+				background-color: #fff;
 			}
 			
 			.hd-txt {
