未处理完，临时提交；电子书

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,6 +1,5 @@
 <!-- Comments BEGIN -->
-<div class=" "></div>
-<script type="text/javascript">
-  
 </script>
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2076299"></script>
 <!-- Comments END -->
