--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -195,19 +195,27 @@ body.is-loading #banner > .inner {
 }
 
 #banner h1 {
-    font-size: 2.5em;
+    font-size: 2em;
     line-height: 1em;
     margin: 1em 0 0 0;
     padding: 0;
     color: #FFF;
 }
 
-#banner p {
+#banner h1 + p {
+    font-size: 1em;
+    margin-top: 0.3em;
+    margin-bottom: 0;
+    color: #e1e1e1;
+}
+#banner  p {
     font-size: 1.5em;
+    margin-top: 0.3em;
     margin-bottom: 0;
 }
 #banner p:last-child {
     margin-top: 2.5em;
+    color: red;
 }
 
 #banner a {
@@ -218,10 +226,16 @@ body.is-loading #banner > .inner {
 #banner .avatar img {
     display: block;
     /*width: 50%; 245px */
-    height: 50%;
+    height: 220px;
     margin: 0 auto;
     border-radius: 100%;
     box-shadow: 0 0 0 0.6rem #e1e1e1;
+}
+#banner .actions{
+    position: absolute;
+    bottom: 1em;
+    left: 0;
+    right:0;
 }
 
 /**
