--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -16,9 +16,9 @@
     .wrapper > .inner {
         width: 100%;
     }
-    #banner h1 {
-        font-size: 2.5em;
-    }
+    /*#banner h1 {*/
+        /*font-size: 2.5em;*/
+    /*}*/
 
 
 }
