--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -34,20 +34,20 @@
     header nav{
         display: none;
     }
-    header #narrow-nav{
+    header #nav-narrow{
         display: block;
         position: absolute;
         z-index: 9;
         width: 100vw;
         /*height: 3.5rem;*/
     }
-    header #narrow-nav.fixed{
+    header #nav-narrow.fixed{
         position: fixed;
         /*background: rgba(240,240,240,0.3);*/
         background-color: #0d1217;
         box-shadow: #22313F ;
     }
-    header #narrow-nav .menu-btn{
+    header #nav-narrow .menu-btn{
         color: #ccc;
         padding:0 10px;
         line-height: 3.5rem;
@@ -69,7 +69,7 @@
     #nav{
         display: none;
     }
-    #narrow-nav{
+    #nav-narrow{
         display: block;
     }
 
