--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,7 +138,7 @@ body.is-loading #banner > .inner {
     -ms-justify-content: center;
     justify-content: center;
     min-height: 75vh;
-    height: 90vh;
+    height: 100vh;
     position: relative;
     background: #000;
     background-image: url(../../images/banner03.jpg);
@@ -232,6 +232,7 @@ body.is-loading #banner > .inner {
     box-shadow: 0 0 0 0.6rem #e1e1e1;
 }
 #banner .actions{
+    color: #e1e1e1;
     position: absolute;
     bottom: 1em;
     left: 0;
