--- a/assets/css/list.css
+++ b/assets/css/list.css
@@ -99,7 +99,7 @@ ul.actions {
 
 ul.actions li {
     display: inline-block;
-    padding: 0 1em 0 0;
+    padding: 0 1rem 0 0;
     vertical-align: middle;
 }
 
@@ -159,17 +159,17 @@ ul.actions.fit.small li {
 }
 
 @media screen and (max-width: 480px) {
+    /*
+        ul.actions {
+            margin: 0 0 2em 0;
+        }
 
-    ul.actions {
-        margin: 0 0 2em 0;
-    }
-
-    ul.actions li {
-        padding: 1em 0 0 0;
-        display: block;
-        text-align: center;
-        width: 100%;
-    }
+        ul.actions li {
+            padding: 1em 0 0 0;
+            display: block;
+            text-align: center;
+            width: 100%;
+        }*/
 
     ul.actions li:first-child {
         padding-top: 0;
@@ -180,9 +180,9 @@ ul.actions.fit.small li {
         margin: 0 !important;
     }
 
-    ul.actions li > *.icon:before {
+    /*ul.actions li > *.icon:before {
         margin-left: -2em;
-    }
+    }*/
 
     ul.actions.small li {
         padding: 0.5em 0 0 0;
